@@ -3,19 +3,28 @@
 import locale
 from django.conf import settings
 from django.contrib.syndication.feeds import Feed
+from django.core.exceptions import ObjectDoesNotExist
 from django.utils.feedgenerator import Atom1Feed
 from raptiye.blog.views import get_latest_entries_list
 from raptiye.frontpage.models import FrontPage
 from raptiye.tags.models import Tag
 
 class RSS(Feed):
-	fp = FrontPage.objects.get(pk=1)
-	title = fp.title
-	link = '/blog/'
-	description = fp.subtitle
 	language = u"en"
 	title_template = "feeds/latest_title.html"
 	description_template = "feeds/latest_description.html"
+	
+	def title(self):
+		fp = FrontPage.objects.get(pk=1)
+		return fp.title
+	
+	def description(self):
+		fp = FrontPage.objects.get(pk=1)
+		return fp.subtitle
+	
+	def link(self):
+		fp = FrontPage.objects.get(pk=1)
+		return fp.links.get(title="Günlük").url
 	
 	def item_link(self, item):
 		return item.get_full_url()
@@ -23,7 +32,6 @@ class RSS(Feed):
 	def item_pubdate(self, item):
 		# setting locale
 		locale.setlocale(locale.LC_ALL, settings.LOCALES["en"])
-		
 		return item.datetime
 
 class RSSLatestEntries(RSS):
@@ -34,3 +42,16 @@ class RSSLatestEntries(RSS):
 class AtomLatestEntries(RSSLatestEntries):
 	feed_type = Atom1Feed
 	subtitle = RSS.description
+
+class RSSEntriesWithTag(RSS):
+	# /feeds/entries_tagged_with/tag_name_here
+	
+	def get_object(self, bits):
+		if len(bits) != 1:
+			raise ObjectDoesNotExist
+			
+		return Tag.objects.get(name=bits[0])
+	
+	def items(self, obj):
+		fp = FrontPage.objects.get(pk=1)
+		return obj.entries.all()[:fp.rss_limit]
